@@ -124,9 +124,9 @@ public class WikiLogger {
 			Properties properties = new Properties();
 			properties.load(stream);
 			String pattern = properties.getProperty("org.jamwiki.pattern");
-			int limit = new Integer(properties.getProperty("org.jamwiki.limit")).intValue();
-			int count = new Integer(properties.getProperty("org.jamwiki.count")).intValue();
-			boolean append = Boolean.valueOf(properties.getProperty("org.jamwiki.append")).booleanValue();
+			int limit = Integer.valueOf(properties.getProperty("org.jamwiki.limit"));
+			int count = Integer.valueOf(properties.getProperty("org.jamwiki.count"));
+			boolean append = Boolean.valueOf(properties.getProperty("org.jamwiki.append"));
 			String datePattern = properties.getProperty("org.jamwiki.timestamp");
 			DEFAULT_LOG_LEVEL = Level.parse(properties.getProperty("org.jamwiki.level"));
 			WikiLogger.DEFAULT_LOG_HANDLER = new FileHandler(pattern, limit, count, append);
@@ -285,6 +285,41 @@ public class WikiLogger {
 	 */
 	public void info(String msg, Throwable thrown) {
 		this.logger.log(Level.INFO, msg, thrown);
+	}
+
+	/**
+	 * Return <code>true</code> if a log message of level CONFIG can be logged.
+	 */
+	public boolean isConfigEnabled() {
+		return this.logger.isLoggable(Level.CONFIG);
+	}
+
+	/**
+	 * Return <code>true</code> if a log message of level FINE can be logged.
+	 */
+	public boolean isFineEnabled() {
+		return this.logger.isLoggable(Level.FINE);
+	}
+
+	/**
+	 * Return <code>true</code> if a log message of level FINER can be logged.
+	 */
+	public boolean isFinerEnabled() {
+		return this.logger.isLoggable(Level.FINER);
+	}
+
+	/**
+	 * Return <code>true</code> if a log message of level FINEST can be logged.
+	 */
+	public boolean isFinestEnabled() {
+		return this.logger.isLoggable(Level.FINEST);
+	}
+
+	/**
+	 * Return <code>true</code> if a log message of level INFO can be logged.
+	 */
+	public boolean isInfoEnabled() {
+		return this.logger.isLoggable(Level.INFO);
 	}
 
 	/**
