@@ -16,16 +16,17 @@
  */
 package org.jamwiki.db;
 
+import java.io.IOException;
 import java.sql.Connection;
+import java.sql.SQLException;
 import java.sql.Timestamp;
-import java.util.Collection;
-import java.util.Iterator;
+import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
-import java.util.Vector;
 import net.sf.ehcache.Element;
 import org.apache.commons.lang.StringUtils;
+import org.jamwiki.DataAccessException;
 import org.jamwiki.DataHandler;
 import org.jamwiki.WikiBase;
 import org.jamwiki.WikiException;
@@ -33,6 +34,7 @@ import org.jamwiki.WikiMessage;
 import org.jamwiki.authentication.JAMWikiAuthenticationConfiguration;
 import org.jamwiki.authentication.WikiUserDetails;
 import org.jamwiki.model.Category;
+import org.jamwiki.model.LogItem;
 import org.jamwiki.model.RecentChange;
 import org.jamwiki.model.Role;
 import org.jamwiki.model.RoleMap;
@@ -44,6 +46,7 @@ import org.jamwiki.model.WikiFile;
 import org.jamwiki.model.WikiFileVersion;
 import org.jamwiki.model.WikiGroup;
 import org.jamwiki.model.WikiUser;
+import org.jamwiki.parser.ParserException;
 import org.jamwiki.parser.ParserOutput;
 import org.jamwiki.parser.ParserUtil;
 import org.jamwiki.utils.Encryption;
@@ -63,182 +66,211 @@ import org.springframework.transaction.TransactionStatus;
 public class AnsiDataHandler implements DataHandler {
 
 	private static final String CACHE_TOPICS = "org.jamwiki.db.AnsiDataHandler.CACHE_TOPICS";
+	private static final String CACHE_TOPIC_VERSIONS = "org.jamwiki.db.AnsiDataHandler.CACHE_TOPIC_VERSIONS";
+	private static final String CACHE_USER_BY_USER_ID = "org.jamwiki.db.AnsiDataHandler.CACHE_USER_BY_USER_ID";
+	private static final String CACHE_USER_BY_USER_NAME = "org.jamwiki.db.AnsiDataHandler.CACHE_USER_BY_USER_NAME";
 	private static final String CACHE_VIRTUAL_WIKI = "org.jamwiki.db.AnsiDataHandler.CACHE_VIRTUAL_WIKI";
 	private static final WikiLogger logger = WikiLogger.getLogger(AnsiDataHandler.class.getName());
-
-	// some constants
-	public static final String DATA_TOPIC_NAME = "topic_name";
-	public static final String DATA_WIKI_USER_ID = "wiki_user_id" ;
-	public static final String DATA_GROUP_ID = "group_id";
-	public static final String DATA_CATEGORY_NAME = "category_name";
-	public static final String DATA_TOPIC_ID = "topic_id";
 
 	private final QueryHandler queryHandler = new AnsiQueryHandler();
 
 	/**
 	 *
 	 */
-	private void addCategory(Category category, Connection conn) throws Exception {
+	private void addCategory(Category category, Connection conn) throws DataAccessException, WikiException {
 		int virtualWikiId = this.lookupVirtualWikiId(category.getVirtualWiki());
 		this.validateCategory(category);
-		this.queryHandler().insertCategory(category, virtualWikiId, conn);
+		try {
+			this.queryHandler().insertCategory(category, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void addGroupMember(String username, int groupId, Connection conn) throws Exception {
-		int groupMemberId = this.queryHandler().nextGroupMemberId(conn);
-		this.queryHandler().insertGroupMember(groupMemberId, username, groupId, conn);
+	private void addGroupMember(String username, int groupId, Connection conn) throws DataAccessException {
+		try {
+			this.queryHandler().insertGroupMember(username, groupId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void addRecentChange(RecentChange change, Connection conn) throws Exception {
+	private void addLogItem(LogItem logItem, Connection conn) throws DataAccessException, WikiException {
+		int virtualWikiId = this.lookupVirtualWikiId(logItem.getVirtualWiki());
+		this.validateLogItem(logItem);
+		try {
+			this.queryHandler().insertLogItem(logItem, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addRecentChange(RecentChange change, Connection conn) throws DataAccessException, WikiException {
 		int virtualWikiId = this.lookupVirtualWikiId(change.getVirtualWiki());
 		this.validateRecentChange(change);
-		this.queryHandler().insertRecentChange(change, virtualWikiId, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addTopic(Topic topic, Connection conn) throws Exception {
-		int virtualWikiId = this.lookupVirtualWikiId(topic.getVirtualWiki());
-		if (topic.getTopicId() < 1) {
-			int topicId = this.queryHandler().nextTopicId(conn);
-			topic.setTopicId(topicId);
-		}
-		this.validateTopic(topic);
-		this.queryHandler().insertTopic(topic, virtualWikiId, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addTopicVersion(TopicVersion topicVersion, Connection conn) throws Exception {
-		if (topicVersion.getTopicVersionId() < 1) {
-			int topicVersionId = this.queryHandler().nextTopicVersionId(conn);
-			topicVersion.setTopicVersionId(topicVersionId);
-		}
-		if (topicVersion.getEditDate() == null) {
-			Timestamp editDate = new Timestamp(System.currentTimeMillis());
-			topicVersion.setEditDate(editDate);
-		}
-		this.validateTopicVersion(topicVersion);
-		this.queryHandler().insertTopicVersion(topicVersion, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addUserDetails(WikiUserDetails userDetails, Connection conn) throws Exception {
-		this.validateUserDetails(userDetails);
-		this.queryHandler().insertUserDetails(userDetails, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addVirtualWiki(VirtualWiki virtualWiki, Connection conn) throws Exception {
-		if (virtualWiki.getVirtualWikiId() < 1) {
-			int virtualWikiId = this.queryHandler().nextVirtualWikiId(conn);
-			virtualWiki.setVirtualWikiId(virtualWikiId);
-		}
-		this.validateVirtualWiki(virtualWiki);
-		this.queryHandler().insertVirtualWiki(virtualWiki, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addWatchlistEntry(int virtualWikiId, String topicName, int userId, Connection conn) throws Exception {
-		this.validateWatchlistEntry(topicName);
-		this.queryHandler().insertWatchlistEntry(virtualWikiId, topicName, userId, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addWikiFile(WikiFile wikiFile, Connection conn) throws Exception {
-		if (wikiFile.getFileId() < 1) {
-			int fileId = this.queryHandler().nextWikiFileId(conn);
-			wikiFile.setFileId(fileId);
-		}
-		int virtualWikiId = this.lookupVirtualWikiId(wikiFile.getVirtualWiki());
-		this.validateWikiFile(wikiFile);
-		this.queryHandler().insertWikiFile(wikiFile, virtualWikiId, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addWikiFileVersion(WikiFileVersion wikiFileVersion, Connection conn) throws Exception {
-		if (wikiFileVersion.getFileVersionId() < 1) {
-			int fileVersionId = this.queryHandler().nextWikiFileVersionId(conn);
-			wikiFileVersion.setFileVersionId(fileVersionId);
-		}
-		if (wikiFileVersion.getUploadDate() == null) {
-			Timestamp uploadDate = new Timestamp(System.currentTimeMillis());
-			wikiFileVersion.setUploadDate(uploadDate);
-		}
-		this.validateWikiFileVersion(wikiFileVersion);
-		this.queryHandler().insertWikiFileVersion(wikiFileVersion, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addWikiGroup(WikiGroup group, Connection conn) throws Exception {
-		if (group.getGroupId() < 1) {
-			int groupId = this.queryHandler().nextWikiGroupId(conn);
-			group.setGroupId(groupId);
-		}
-		this.validateWikiGroup(group);
-		this.queryHandler().insertWikiGroup(group, conn);
-	}
-
-	/**
-	 *
-	 */
-	private void addWikiUser(WikiUser user, Connection conn) throws Exception {
-		if (user.getUserId() < 1) {
-			int nextUserId = this.queryHandler().nextWikiUserId(conn);
-			user.setUserId(nextUserId);
-		}
-		this.validateWikiUser(user);
-		this.queryHandler().insertWikiUser(user, conn);
-	}
-
-	/**
-	 *
-	 */
-	public boolean authenticate(String username, String password) throws Exception {
-		boolean result = false;
-		TransactionStatus status = DatabaseConnection.startTransaction();
 		try {
+			this.queryHandler().insertRecentChange(change, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addTopic(Topic topic, Connection conn) throws DataAccessException, WikiException {
+		int virtualWikiId = this.lookupVirtualWikiId(topic.getVirtualWiki());
+		try {
+			this.validateTopic(topic);
+			this.queryHandler().insertTopic(topic, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addTopicVersion(TopicVersion topicVersion, Connection conn) throws DataAccessException, WikiException {
+		try {
+			this.validateTopicVersion(topicVersion);
+			this.queryHandler().insertTopicVersion(topicVersion, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addUserDetails(WikiUserDetails userDetails, Connection conn) throws DataAccessException, WikiException {
+		this.validateUserDetails(userDetails);
+		try {
+			this.queryHandler().insertUserDetails(userDetails, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addVirtualWiki(VirtualWiki virtualWiki, Connection conn) throws DataAccessException, WikiException {
+		try {
+			this.validateVirtualWiki(virtualWiki);
+			this.queryHandler().insertVirtualWiki(virtualWiki, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addWatchlistEntry(int virtualWikiId, String topicName, int userId, Connection conn) throws DataAccessException, WikiException {
+		this.validateWatchlistEntry(topicName);
+		try {
+			this.queryHandler().insertWatchlistEntry(virtualWikiId, topicName, userId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addWikiFile(WikiFile wikiFile, Connection conn) throws DataAccessException, WikiException {
+		try {
+			int virtualWikiId = this.lookupVirtualWikiId(wikiFile.getVirtualWiki());
+			this.validateWikiFile(wikiFile);
+			this.queryHandler().insertWikiFile(wikiFile, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addWikiFileVersion(WikiFileVersion wikiFileVersion, Connection conn) throws DataAccessException, WikiException {
+		try {
+			this.validateWikiFileVersion(wikiFileVersion);
+			this.queryHandler().insertWikiFileVersion(wikiFileVersion, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addWikiGroup(WikiGroup group, Connection conn) throws DataAccessException, WikiException {
+		try {
+			this.validateWikiGroup(group);
+			this.queryHandler().insertWikiGroup(group, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private void addWikiUser(WikiUser user, Connection conn) throws DataAccessException, WikiException {
+		try {
+			this.validateWikiUser(user);
+			this.queryHandler().insertWikiUser(user, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	public boolean authenticate(String username, String password) throws DataAccessException {
+		boolean result = false;
+		TransactionStatus status = null;
+		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			// password is stored encrypted, so encrypt password
 			if (!StringUtils.isBlank(password)) {
 				String encryptedPassword = Encryption.encrypt(password);
 				return this.queryHandler().authenticateUser(username, encryptedPassword, conn);
 			}
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			DatabaseConnection.rollbackOnException(status, e);
-			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
 		return result;
 	}
 
 	/**
+	 * Utility method for retrieving a user display name.
+	 */
+	private String authorName(Integer authorId, String authorName) throws DataAccessException {
+		if (authorId != null) {
+			WikiUser user = this.lookupWikiUser(authorId);
+			authorName = user.getUsername();
+		}
+		return authorName;
+	}
+
+	/**
 	 *
 	 */
-	public boolean canMoveTopic(Topic fromTopic, String destination) throws Exception {
+	public boolean canMoveTopic(Topic fromTopic, String destination) throws DataAccessException {
 		Topic toTopic = this.lookupTopic(fromTopic.getVirtualWiki(), destination, false, null);
 		if (toTopic == null || toTopic.getDeleteDate() != null) {
 			// destination doesn't exist or is deleted, so move is OK
@@ -256,25 +288,30 @@ public class AnsiDataHandler implements DataHandler {
 	 */
 	private static void checkLength(String value, int maxLength) throws WikiException {
 		if (value != null && value.length() > maxLength) {
-			throw new WikiException(new WikiMessage("error.fieldlength", value, new Integer(maxLength).toString()));
+			throw new WikiException(new WikiMessage("error.fieldlength", value, Integer.valueOf(maxLength).toString()));
 		}
 	}
 
 	/**
 	 *
 	 */
-	private void deleteRecentChanges(Topic topic, Connection conn) throws Exception {
-		this.queryHandler().deleteRecentChanges(topic.getTopicId(), conn);
+	private void deleteRecentChanges(Topic topic, Connection conn) throws DataAccessException {
+		try {
+			this.queryHandler().deleteRecentChanges(topic.getTopicId(), conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public void deleteTopic(Topic topic, TopicVersion topicVersion, boolean userVisible) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void deleteTopic(Topic topic, TopicVersion topicVersion) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
-			if (userVisible) {
+			if (topicVersion != null) {
 				// delete old recent changes
 				deleteRecentChanges(topic, conn);
 			}
@@ -282,13 +319,16 @@ public class AnsiDataHandler implements DataHandler {
 			// should be empty since nothing to add to search engine.
 			ParserOutput parserOutput = new ParserOutput();
 			topic.setDeleteDate(new Timestamp(System.currentTimeMillis()));
-			this.writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), userVisible);
-		} catch (Exception e) {
+			this.writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks());
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -296,32 +336,58 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	private void deleteTopicCategories(Topic topic, Connection conn) throws Exception {
-		this.queryHandler().deleteTopicCategories(topic.getTopicId(), conn);
+	private void deleteTopicCategories(Topic topic, Connection conn) throws DataAccessException {
+		try {
+			this.queryHandler().deleteTopicCategories(topic.getTopicId(), conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void deleteWatchlistEntry(int virtualWikiId, String topicName, int userId, Connection conn) throws Exception {
-		this.queryHandler().deleteWatchlistEntry(virtualWikiId, topicName, userId, conn);
+	private void deleteWatchlistEntry(int virtualWikiId, String topicName, int userId, Connection conn) throws DataAccessException {
+		try {
+			this.queryHandler().deleteWatchlistEntry(virtualWikiId, topicName, userId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public List getAllCategories(String virtualWiki, Pagination pagination) throws Exception {
-		List results = new Vector();
+	public void executeUpgradeQuery(String prop, Connection conn) throws SQLException {
+		this.queryHandler().executeUpgradeQuery(prop, conn);
+	}
+
+	/**
+	 *
+	 */
+	public void executeUpgradeUpdate(String prop, Connection conn) throws SQLException {
+		this.queryHandler().executeUpgradeUpdate(prop, conn);
+	}
+
+	/**
+	 *
+	 */
+	public List<Category> getAllCategories(String virtualWiki, Pagination pagination) throws DataAccessException {
+		List<Category> results = new ArrayList<Category>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().getCategories(virtualWikiId, pagination);
-		while (rs.next()) {
-			Category category = new Category();
-			category.setName(rs.getString(DATA_CATEGORY_NAME));
-			// child topic name not initialized since it is not needed
-			category.setVirtualWiki(virtualWiki);
-			category.setSortKey(rs.getString("sort_key"));
-			// topic type not initialized since it is not needed
-			results.add(category);
+		try {
+			WikiResultSet rs = this.queryHandler().getCategories(virtualWikiId, pagination);
+			while (rs.next()) {
+				Category category = new Category();
+				category.setName(rs.getString("category_name"));
+				// child topic name not initialized since it is not needed
+				category.setVirtualWiki(virtualWiki);
+				category.setSortKey(rs.getString("sort_key"));
+				// topic type not initialized since it is not needed
+				results.add(category);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return results;
 	}
@@ -329,9 +395,14 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getAllRoles() throws Exception {
-		List results = new Vector();
-		WikiResultSet rs = this.queryHandler().getRoles();
+	public List<Role> getAllRoles() throws DataAccessException {
+		List<Role> results = new ArrayList<Role>();
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getRoles();
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		while (rs.next()) {
 			results.add(this.initRole(rs));
 		}
@@ -341,12 +412,16 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getAllTopicNames(String virtualWiki) throws Exception {
-		Vector all = new Vector();
+	public List<String> getAllTopicNames(String virtualWiki) throws DataAccessException {
+		List<String> all = new ArrayList<String>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().getAllTopicNames(virtualWikiId);
-		while (rs.next()) {
-			all.add(rs.getString(DATA_TOPIC_NAME));
+		try {
+			WikiResultSet rs = this.queryHandler().getAllTopicNames(virtualWikiId);
+			while (rs.next()) {
+				all.add(rs.getString("topic_name"));
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return all;
 	}
@@ -354,15 +429,19 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getAllWikiFileVersions(String virtualWiki, String topicName, boolean descending) throws Exception {
-		Vector all = new Vector();
+	public List<WikiFileVersion> getAllWikiFileVersions(String virtualWiki, String topicName, boolean descending) throws DataAccessException {
+		List<WikiFileVersion> all = new ArrayList<WikiFileVersion>();
 		WikiFile wikiFile = lookupWikiFile(virtualWiki, topicName);
 		if (wikiFile == null) {
-			throw new Exception("No topic exists for " + virtualWiki + " / " + topicName);
+			throw new DataAccessException("No topic exists for " + virtualWiki + " / " + topicName);
 		}
-		WikiResultSet rs = this.queryHandler().getAllWikiFileVersions(wikiFile, descending);
-		while (rs.next()) {
-			all.add(initWikiFileVersion(rs));
+		try {
+			WikiResultSet rs = this.queryHandler().getAllWikiFileVersions(wikiFile, descending);
+			while (rs.next()) {
+				all.add(initWikiFileVersion(rs));
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return all;
 	}
@@ -370,9 +449,33 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getRecentChanges(String virtualWiki, Pagination pagination, boolean descending) throws Exception {
-		Vector all = new Vector();
-		WikiResultSet rs = this.queryHandler().getRecentChanges(virtualWiki, pagination, descending);
+	public List<LogItem> getLogItems(String virtualWiki, int logType, Pagination pagination, boolean descending) throws DataAccessException {
+		List<LogItem> all = new ArrayList<LogItem>();
+		WikiResultSet rs = null;
+		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
+		try {
+			rs = this.queryHandler().getLogItems(virtualWikiId, logType, pagination, descending);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		while (rs.next()) {
+			LogItem logItem = initLogItem(rs);
+			all.add(logItem);
+		}
+		return all;
+	}
+
+	/**
+	 *
+	 */
+	public List<RecentChange> getRecentChanges(String virtualWiki, Pagination pagination, boolean descending) throws DataAccessException {
+		List<RecentChange> all = new ArrayList<RecentChange>();
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getRecentChanges(virtualWiki, pagination, descending);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		while (rs.next()) {
 			RecentChange change = initRecentChange(rs);
 			all.add(change);
@@ -383,13 +486,137 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getRecentChanges(String virtualWiki, String topicName, Pagination pagination, boolean descending) throws Exception {
-		Vector all = new Vector();
+	public List<RoleMap> getRoleMapByLogin(String loginFragment) throws DataAccessException {
+		LinkedHashMap<Integer, RoleMap> roleMaps = new LinkedHashMap<Integer, RoleMap>();
+		try {
+			WikiResultSet rs = this.queryHandler().getRoleMapByLogin(loginFragment);
+			while (rs.next()) {
+				Integer userId = rs.getInt("wiki_user_id");
+				RoleMap roleMap = new RoleMap();
+				if (roleMaps.containsKey(userId)) {
+					roleMap = roleMaps.get(userId);
+				} else {
+					roleMap.setUserId(userId);
+					roleMap.setUserLogin(rs.getString("username"));
+				}
+				roleMap.addRole(rs.getString("authority"));
+				roleMaps.put(userId, roleMap);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		return new ArrayList<RoleMap>(roleMaps.values());
+	}
+
+	/**
+	 *
+	 */
+	public List<RoleMap> getRoleMapByRole(String authority) throws DataAccessException {
+		LinkedHashMap<String, RoleMap> roleMaps = new LinkedHashMap<String, RoleMap>();
+		try {
+			WikiResultSet rs = this.queryHandler().getRoleMapByRole(authority);
+			while (rs.next()) {
+				int userId = rs.getInt("wiki_user_id");
+				int groupId = rs.getInt("group_id");
+				RoleMap roleMap = new RoleMap();
+				String key = userId + "|" + groupId;
+				if (roleMaps.containsKey(key)) {
+					roleMap = roleMaps.get(key);
+				} else {
+					if (userId > 0) {
+						roleMap.setUserId(userId);
+						roleMap.setUserLogin(rs.getString("username"));
+					}
+					if (groupId > 0) {
+						roleMap.setGroupId(groupId);
+						roleMap.setGroupName(rs.getString("group_name"));
+					}
+				}
+				roleMap.addRole(rs.getString("authority"));
+				roleMaps.put(key, roleMap);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		return new ArrayList<RoleMap>(roleMaps.values());
+	}
+
+	/**
+	 *
+	 */
+	public Role[] getRoleMapGroup(String groupName) throws DataAccessException {
+		List<Role> results = new ArrayList<Role>();
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getRoleMapGroup(groupName);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		while (rs.next()) {
+			Role role = this.initRole(rs);
+			results.add(role);
+		}
+		return results.toArray(new Role[0]);
+	}
+
+	/**
+	 *
+	 */
+	public List<RoleMap> getRoleMapGroups() throws DataAccessException {
+		LinkedHashMap<Integer, RoleMap> roleMaps = new LinkedHashMap<Integer, RoleMap>();
+		try {
+			WikiResultSet rs = this.queryHandler().getRoleMapGroups();
+			while (rs.next()) {
+				Integer groupId = rs.getInt("group_id");
+				RoleMap roleMap = new RoleMap();
+				if (roleMaps.containsKey(groupId)) {
+					roleMap = roleMaps.get(groupId);
+				} else {
+					roleMap.setGroupId(groupId);
+					roleMap.setGroupName(rs.getString("group_name"));
+				}
+				roleMap.addRole(rs.getString("authority"));
+				roleMaps.put(groupId, roleMap);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		return new ArrayList<RoleMap>(roleMaps.values());
+	}
+
+	/**
+	 *
+	 */
+	public Role[] getRoleMapUser(String login) throws DataAccessException {
+		List<Role> results = new ArrayList<Role>();
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getRoleMapUser(login);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
+		while (rs.next()) {
+			Role role = this.initRole(rs);
+			results.add(role);
+		}
+		return results.toArray(new Role[0]);
+	}
+
+	/**
+	 *
+	 */
+	public List<RecentChange> getTopicHistory(String virtualWiki, String topicName, Pagination pagination, boolean descending) throws DataAccessException {
+		List<RecentChange> all = new ArrayList<RecentChange>();
 		Topic topic = this.lookupTopic(virtualWiki, topicName, true, null);
 		if (topic == null) {
 			return all;
 		}
-		WikiResultSet rs = this.queryHandler().getRecentChanges(topic.getTopicId(), pagination, descending);
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getTopicHistory(topic.getTopicId(), pagination, descending);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		while (rs.next()) {
 			RecentChange change = initRecentChange(rs);
 			all.add(change);
@@ -400,110 +627,17 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public Collection getRoleMapByLogin(String loginFragment) throws Exception {
-		LinkedHashMap roleMaps = new LinkedHashMap();
-		WikiResultSet rs = this.queryHandler().getRoleMapByLogin(loginFragment);
-		while (rs.next()) {
-			Integer userId = new Integer(rs.getInt(DATA_WIKI_USER_ID));
-			RoleMap roleMap = new RoleMap();
-			if (roleMaps.containsKey(userId)) {
-				roleMap = (RoleMap)roleMaps.get(userId);
-			} else {
-				roleMap.setUserId(userId);
-				roleMap.setUserLogin(rs.getString("username"));
-			}
-			roleMap.addRole(rs.getString("authority"));
-			roleMaps.put(userId, roleMap);
-		}
-		return roleMaps.values();
-	}
-
-	/**
-	 *
-	 */
-	public Collection getRoleMapByRole(String authority) throws Exception {
-		LinkedHashMap roleMaps = new LinkedHashMap();
-		WikiResultSet rs = this.queryHandler().getRoleMapByRole(authority);
-		while (rs.next()) {
-			int userId = rs.getInt(DATA_WIKI_USER_ID);
-			int groupId = rs.getInt(DATA_GROUP_ID);
-			RoleMap roleMap = new RoleMap();
-			String key = userId + "|" + groupId;
-			if (roleMaps.containsKey(key)) {
-				roleMap = (RoleMap)roleMaps.get(key);
-			} else {
-				if (userId > 0) {
-					roleMap.setUserId(new Integer(userId));
-					roleMap.setUserLogin(rs.getString("username"));
-				}
-				if (groupId > 0) {
-					roleMap.setGroupId(new Integer(groupId));
-					roleMap.setGroupName(rs.getString("group_name"));
-				}
-			}
-			roleMap.addRole(rs.getString("authority"));
-			roleMaps.put(key, roleMap);
-		}
-		return roleMaps.values();
-	}
-
-	/**
-	 *
-	 */
-	public Role[] getRoleMapGroup(String groupName) throws Exception {
-		List results = new Vector();
-		WikiResultSet rs = this.queryHandler().getRoleMapGroup(groupName);
-		while (rs.next()) {
-			Role role = this.initRole(rs);
-			results.add(role);
-		}
-		return (Role[])results.toArray(new Role[0]);
-	}
-
-	/**
-	 *
-	 */
-	public Collection getRoleMapGroups() throws Exception {
-		LinkedHashMap roleMaps = new LinkedHashMap();
-		WikiResultSet rs = this.queryHandler().getRoleMapGroups();
-		while (rs.next()) {
-			Integer groupId = new Integer(rs.getInt(DATA_GROUP_ID));
-			RoleMap roleMap = new RoleMap();
-			if (roleMaps.containsKey(groupId)) {
-				roleMap = (RoleMap)roleMaps.get(groupId);
-			} else {
-				roleMap.setGroupId(groupId);
-				roleMap.setGroupName(rs.getString("group_name"));
-			}
-			roleMap.addRole(rs.getString("authority"));
-			roleMaps.put(groupId, roleMap);
-		}
-		return roleMaps.values();
-	}
-
-	/**
-	 *
-	 */
-	public Role[] getRoleMapUser(String login) throws Exception {
-		List results = new Vector();
-		WikiResultSet rs = this.queryHandler().getRoleMapUser(login);
-		while (rs.next()) {
-			Role role = this.initRole(rs);
-			results.add(role);
-		}
-		return (Role[])results.toArray(new Role[0]);
-	}
-
-	/**
-	 *
-	 */
-	public List getTopicsAdmin(String virtualWiki, Pagination pagination) throws Exception {
-		List all = new Vector();
+	public List<String> getTopicsAdmin(String virtualWiki, Pagination pagination) throws DataAccessException {
+		List<String> all = new ArrayList<String>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().getTopicsAdmin(virtualWikiId, pagination);
-		while (rs.next()) {
-			String topicName = rs.getString(DATA_TOPIC_NAME);
-			all.add(topicName);
+		try {
+			WikiResultSet rs = this.queryHandler().getTopicsAdmin(virtualWikiId, pagination);
+			while (rs.next()) {
+				String topicName = rs.getString("topic_name");
+				all.add(topicName);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return all;
 	}
@@ -511,9 +645,18 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public List getUserContributions(String virtualWiki, String userString, Pagination pagination, boolean descending) throws Exception {
-		List all = new Vector();
-		WikiResultSet rs = this.queryHandler().getUserContributions(virtualWiki, userString, pagination, descending);
+	public List<RecentChange> getUserContributions(String virtualWiki, String userString, Pagination pagination, boolean descending) throws DataAccessException {
+		List<RecentChange> all = new ArrayList<RecentChange>();
+		WikiResultSet rs = null;
+		try {
+			if (this.lookupWikiUser(userString) != null) {
+				rs = this.queryHandler().getUserContributionsByLogin(virtualWiki, userString, pagination, descending);
+			} else {
+				rs = this.queryHandler().getUserContributionsByUserDisplay(virtualWiki, userString, pagination, descending);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		while (rs.next()) {
 			RecentChange change = initRecentChange(rs);
 			all.add(change);
@@ -524,22 +667,23 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 * Return a List of all VirtualWiki objects that exist for the Wiki.
 	 */
-	public List getVirtualWikiList() throws Exception {
-		Vector results = new Vector();
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public List<VirtualWiki> getVirtualWikiList() throws DataAccessException {
+		List<VirtualWiki> results = new ArrayList<VirtualWiki>();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiResultSet rs = this.queryHandler().getVirtualWikis(conn);
 			while (rs.next()) {
 				VirtualWiki virtualWiki = initVirtualWiki(rs);
 				results.add(virtualWiki);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
 		return results;
@@ -550,13 +694,17 @@ public class AnsiDataHandler implements DataHandler {
 	 * names that can be used to determine if a topic is in a user's current
 	 * watchlist.
 	 */
-	public Watchlist getWatchlist(String virtualWiki, int userId) throws Exception {
-		List all = new Vector();
+	public Watchlist getWatchlist(String virtualWiki, int userId) throws DataAccessException {
+		List<String> all = new ArrayList<String>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().getWatchlist(virtualWikiId, userId);
-		while (rs.next()) {
-			String topicName = rs.getString(DATA_TOPIC_NAME);
-			all.add(topicName);
+		try {
+			WikiResultSet rs = this.queryHandler().getWatchlist(virtualWikiId, userId);
+			while (rs.next()) {
+				String topicName = rs.getString("topic_name");
+				all.add(topicName);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return new Watchlist(virtualWiki, all);
 	}
@@ -565,10 +713,15 @@ public class AnsiDataHandler implements DataHandler {
 	 * Retrieve a watchlist containing a List of RecentChanges objects
 	 * that can be used for display on the Special:Watchlist page.
 	 */
-	public List getWatchlist(String virtualWiki, int userId, Pagination pagination) throws Exception {
-		List all = new Vector();
+	public List<RecentChange> getWatchlist(String virtualWiki, int userId, Pagination pagination) throws DataAccessException {
+		List<RecentChange> all = new ArrayList<RecentChange>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().getWatchlist(virtualWikiId, userId, pagination);
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().getWatchlist(virtualWikiId, userId, pagination);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		while (rs.next()) {
 			RecentChange change = initRecentChange(rs);
 			all.add(change);
@@ -579,51 +732,98 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	private RecentChange initRecentChange(WikiResultSet rs) {
+	private LogItem initLogItem(WikiResultSet rs) throws DataAccessException {
 		try {
-			RecentChange change = new RecentChange();
-			change.setTopicVersionId(rs.getInt("topic_version_id"));
-			int previousTopicVersionId = rs.getInt("previous_topic_version_id");
-			if (previousTopicVersionId > 0) {
-				change.setPreviousTopicVersionId(new Integer(previousTopicVersionId));
-			}
-			change.setTopicId(rs.getInt(DATA_TOPIC_ID));
-			change.setTopicName(rs.getString(DATA_TOPIC_NAME));
-			change.setCharactersChanged(rs.getInt("characters_changed"));
-			change.setEditDate(rs.getTimestamp("edit_date"));
-			change.setEditComment(rs.getString("edit_comment"));
-			int userId = rs.getInt(DATA_WIKI_USER_ID);
+			LogItem logItem = new LogItem();
+			int userId = rs.getInt("wiki_user_id");
 			if (userId > 0) {
-				change.setAuthorId(new Integer(userId));
+				logItem.setUserId(userId);
 			}
-			change.setAuthorName(rs.getString("display_name"));
-			change.setEditType(rs.getInt("edit_type"));
-			change.setVirtualWiki(rs.getString("virtual_wiki_name"));
-			return change;
-		} catch (Exception e) {
-			logger.severe("Failure while initializing recent change", e);
-			return null;
+			logItem.setUserDisplayName(rs.getString("display_name"));
+			int topicId = rs.getInt("topic_id");
+			if (topicId > 0) {
+				logItem.setTopicId(topicId);
+			}
+			int topicVersionId = rs.getInt("topic_version_id");
+			if (topicVersionId > 0) {
+				logItem.setTopicVersionId(topicVersionId);
+			}
+			logItem.setLogDate(rs.getTimestamp("log_date"));
+			logItem.setLogComment(rs.getString("log_comment"));
+			logItem.setLogParamString(rs.getString("log_params"));
+			logItem.setLogType(rs.getInt("log_type"));
+			String virtualWiki = this.lookupVirtualWikiName(rs.getInt("virtual_wiki_id"));
+			logItem.setVirtualWiki(virtualWiki);
+			return logItem;
+		} catch (SQLException e) {
+			logger.severe("Failure while initializing log item", e);
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private Role initRole(WikiResultSet rs) {
+	private RecentChange initRecentChange(WikiResultSet rs) throws DataAccessException {
+		try {
+			RecentChange change = new RecentChange();
+			int topicVersionId = rs.getInt("topic_version_id");
+			if (topicVersionId > 0) {
+				change.setTopicVersionId(topicVersionId);
+			}
+			int previousTopicVersionId = rs.getInt("previous_topic_version_id");
+			if (previousTopicVersionId > 0) {
+				change.setPreviousTopicVersionId(previousTopicVersionId);
+			}
+			int topicId = rs.getInt("topic_id");
+			if (topicId > 0) {
+				change.setTopicId(topicId);
+			}
+			change.setTopicName(rs.getString("topic_name"));
+			change.setCharactersChanged(rs.getInt("characters_changed"));
+			change.setChangeDate(rs.getTimestamp("change_date"));
+			change.setChangeComment(rs.getString("change_comment"));
+			int userId = rs.getInt("wiki_user_id");
+			if (userId > 0) {
+				change.setAuthorId(userId);
+			}
+			change.setAuthorName(rs.getString("display_name"));
+			int editType = rs.getInt("edit_type");
+			if (editType > 0) {
+				change.setEditType(editType);
+				change.initChangeWikiMessageForVersion(editType, rs.getString("log_params"));
+			}
+			int logType = rs.getInt("log_type");
+			if (logType > 0) {
+				change.setLogType(logType);
+				change.initChangeWikiMessageForLog(logType, rs.getString("log_params"));
+			}
+			change.setVirtualWiki(rs.getString("virtual_wiki_name"));
+			return change;
+		} catch (SQLException e) {
+			logger.severe("Failure while initializing recent change", e);
+			throw new DataAccessException(e);
+		}
+	}
+
+	/**
+	 *
+	 */
+	private Role initRole(WikiResultSet rs) throws DataAccessException {
 		try {
 			Role role = new Role(rs.getString("role_name"));
 			role.setDescription(rs.getString("role_description"));
 			return role;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing role", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private Topic initTopic(WikiResultSet rs) {
+	private Topic initTopic(WikiResultSet rs) throws DataAccessException {
 		try {
 			// if a topic by this name has been deleted then there will be
 			// multiple results.  the first will be a non-deleted topic (if
@@ -637,11 +837,11 @@ public class AnsiDataHandler implements DataHandler {
 			String virtualWiki = this.lookupVirtualWikiName(virtualWikiId);
 			Topic topic = new Topic();
 			topic.setAdminOnly(rs.getInt("topic_admin_only") != 0);
-			topic.setName(rs.getString(DATA_TOPIC_NAME));
+			topic.setName(rs.getString("topic_name"));
 			topic.setVirtualWiki(virtualWiki);
 			int currentVersionId = rs.getInt("current_version_id");
 			if (currentVersionId > 0) {
-				topic.setCurrentVersionId(new Integer(currentVersionId));
+				topic.setCurrentVersionId(currentVersionId);
 			}
 			topic.setTopicContent(rs.getString("version_content"));
 			// FIXME - Oracle cannot store an empty string - it converts them
@@ -649,26 +849,26 @@ public class AnsiDataHandler implements DataHandler {
 			if (topic.getTopicContent() == null) {
 				topic.setTopicContent("");
 			}
-			topic.setTopicId(rs.getInt(DATA_TOPIC_ID));
+			topic.setTopicId(rs.getInt("topic_id"));
 			topic.setReadOnly(rs.getInt("topic_read_only") != 0);
 			topic.setDeleteDate(rs.getTimestamp("delete_date"));
 			topic.setTopicType(rs.getInt("topic_type"));
 			topic.setRedirectTo(rs.getString("redirect_to"));
 			return topic;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing topic", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private TopicVersion initTopicVersion(WikiResultSet rs) {
+	private TopicVersion initTopicVersion(WikiResultSet rs) throws DataAccessException {
 		try {
 			TopicVersion topicVersion = new TopicVersion();
 			topicVersion.setTopicVersionId(rs.getInt("topic_version_id"));
-			topicVersion.setTopicId(rs.getInt(DATA_TOPIC_ID));
+			topicVersion.setTopicId(rs.getInt("topic_id"));
 			topicVersion.setEditComment(rs.getString("edit_comment"));
 			topicVersion.setVersionContent(rs.getString("version_content"));
 			// FIXME - Oracle cannot store an empty string - it converts them
@@ -678,43 +878,44 @@ public class AnsiDataHandler implements DataHandler {
 			}
 			int previousTopicVersionId = rs.getInt("previous_topic_version_id");
 			if (previousTopicVersionId > 0) {
-				topicVersion.setPreviousTopicVersionId(new Integer(previousTopicVersionId));
+				topicVersion.setPreviousTopicVersionId(previousTopicVersionId);
 			}
-			int userId = rs.getInt(DATA_WIKI_USER_ID);
+			int userId = rs.getInt("wiki_user_id");
 			if (userId > 0) {
-				topicVersion.setAuthorId(new Integer(userId));
+				topicVersion.setAuthorId(userId);
 			}
 			topicVersion.setCharactersChanged(rs.getInt("characters_changed"));
+			topicVersion.setVersionParamString(rs.getString("version_params"));
 			topicVersion.setEditDate(rs.getTimestamp("edit_date"));
 			topicVersion.setEditType(rs.getInt("edit_type"));
-			topicVersion.setAuthorIpAddress(rs.getString("wiki_user_ip_address"));
+			topicVersion.setAuthorDisplay(rs.getString("wiki_user_display"));
 			return topicVersion;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing topic version", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private VirtualWiki initVirtualWiki(WikiResultSet rs) {
+	private VirtualWiki initVirtualWiki(WikiResultSet rs) throws DataAccessException {
 		try {
 			VirtualWiki virtualWiki = new VirtualWiki();
 			virtualWiki.setVirtualWikiId(rs.getInt("virtual_wiki_id"));
 			virtualWiki.setName(rs.getString("virtual_wiki_name"));
 			virtualWiki.setDefaultTopicName(rs.getString("default_topic_name"));
 			return virtualWiki;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing virtual wiki", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private WikiFile initWikiFile(WikiResultSet rs) {
+	private WikiFile initWikiFile(WikiResultSet rs) throws DataAccessException {
 		try {
 			int virtualWikiId = rs.getInt("virtual_wiki_id");
 			String virtualWiki = this.lookupVirtualWikiName(virtualWikiId);
@@ -724,67 +925,67 @@ public class AnsiDataHandler implements DataHandler {
 			wikiFile.setFileName(rs.getString("file_name"));
 			wikiFile.setVirtualWiki(virtualWiki);
 			wikiFile.setUrl(rs.getString("file_url"));
-			wikiFile.setTopicId(rs.getInt(DATA_TOPIC_ID));
+			wikiFile.setTopicId(rs.getInt("topic_id"));
 			wikiFile.setReadOnly(rs.getInt("file_read_only") != 0);
 			wikiFile.setDeleteDate(rs.getTimestamp("delete_date"));
 			wikiFile.setMimeType(rs.getString("mime_type"));
 			wikiFile.setFileSize(rs.getInt("file_size"));
 			return wikiFile;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing file", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private WikiFileVersion initWikiFileVersion(WikiResultSet rs) {
+	private WikiFileVersion initWikiFileVersion(WikiResultSet rs) throws DataAccessException {
 		try {
 			WikiFileVersion wikiFileVersion = new WikiFileVersion();
 			wikiFileVersion.setFileVersionId(rs.getInt("file_version_id"));
 			wikiFileVersion.setFileId(rs.getInt("file_id"));
 			wikiFileVersion.setUploadComment(rs.getString("upload_comment"));
 			wikiFileVersion.setUrl(rs.getString("file_url"));
-			int userId = rs.getInt(DATA_WIKI_USER_ID);
+			int userId = rs.getInt("wiki_user_id");
 			if (userId > 0) {
-				wikiFileVersion.setAuthorId(new Integer(userId));
+				wikiFileVersion.setAuthorId(userId);
 			}
 			wikiFileVersion.setUploadDate(rs.getTimestamp("upload_date"));
 			wikiFileVersion.setMimeType(rs.getString("mime_type"));
-			wikiFileVersion.setAuthorIpAddress(rs.getString("wiki_user_ip_address"));
+			wikiFileVersion.setAuthorDisplay(rs.getString("wiki_user_display"));
 			wikiFileVersion.setFileSize(rs.getInt("file_size"));
 			return wikiFileVersion;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing wiki file version", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private WikiGroup initWikiGroup(WikiResultSet rs) {
+	private WikiGroup initWikiGroup(WikiResultSet rs) throws DataAccessException {
 		try {
 			WikiGroup wikiGroup = new WikiGroup();
 			wikiGroup.setGroupId(rs.getInt("group_id"));
 			wikiGroup.setName(rs.getString("group_name"));
 			wikiGroup.setDescription(rs.getString("group_description"));
 			return wikiGroup;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing group", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	private WikiUser initWikiUser(WikiResultSet rs) {
+	private WikiUser initWikiUser(WikiResultSet rs) throws DataAccessException {
 		try {
 			String username = rs.getString("login");
 			WikiUser user = new WikiUser(username);
-			user.setUserId(rs.getInt(DATA_WIKI_USER_ID));
+			user.setUserId(rs.getInt("wiki_user_id"));
 			user.setDisplayName(rs.getString("display_name"));
 			user.setCreateDate(rs.getTimestamp("create_date"));
 			user.setLastLoginDate(rs.getTimestamp("last_login_date"));
@@ -795,27 +996,31 @@ public class AnsiDataHandler implements DataHandler {
 			user.setEditor(rs.getString("editor"));
 			user.setSignature(rs.getString("signature"));
 			return user;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			logger.severe("Failure while initializing user", e);
-			return null;
+			throw new DataAccessException(e);
 		}
 	}
 
 	/**
 	 *
 	 */
-	public List lookupCategoryTopics(String virtualWiki, String categoryName) throws Exception {
-		Vector results = new Vector();
+	public List<Category> lookupCategoryTopics(String virtualWiki, String categoryName) throws DataAccessException {
+		List<Category> results = new ArrayList<Category>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().lookupCategoryTopics(virtualWikiId, categoryName);
-		while (rs.next()) {
-			Category category = new Category();
-			category.setName(categoryName);
-			category.setVirtualWiki(virtualWiki);
-			category.setChildTopicName(rs.getString(DATA_TOPIC_NAME));
-			category.setSortKey(rs.getString("sort_key"));
-			category.setTopicType(rs.getInt("topic_type"));
-			results.add(category);
+		try {
+			WikiResultSet rs = this.queryHandler().lookupCategoryTopics(virtualWikiId, categoryName);
+			while (rs.next()) {
+				Category category = new Category();
+				category.setName(categoryName);
+				category.setVirtualWiki(virtualWiki);
+				category.setChildTopicName(rs.getString("topic_name"));
+				category.setSortKey(rs.getString("sort_key"));
+				category.setTopicType(rs.getInt("topic_type"));
+				results.add(category);
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return results;
 	}
@@ -823,7 +1028,7 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public Topic lookupTopic(String virtualWiki, String topicName, boolean deleteOK, Object transactionObject) throws Exception {
+	public Topic lookupTopic(String virtualWiki, String topicName, boolean deleteOK, Object transactionObject) throws DataAccessException {
 		if (StringUtils.isBlank(virtualWiki) || StringUtils.isBlank(topicName)) {
 			return null;
 		}
@@ -852,8 +1057,9 @@ public class AnsiDataHandler implements DataHandler {
 			}
 		}
 		Topic topic = null;
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
 			WikiResultSet rs = this.queryHandler().lookupTopic(virtualWikiId, topicName, caseSensitive, conn);
@@ -866,12 +1072,12 @@ public class AnsiDataHandler implements DataHandler {
 				Topic cacheTopic = (topic == null) ? null : new Topic(topic);
 				WikiCache.addToCache(CACHE_TOPICS, key, cacheTopic);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
 		return (topic == null || (!deleteOK && topic.getDeleteDate() != null)) ? null : topic;
@@ -884,21 +1090,29 @@ public class AnsiDataHandler implements DataHandler {
 	 * @param virtualWiki The virtual wiki for which the total topic count is being returned
 	 *  for.
 	 */
-	public int lookupTopicCount(String virtualWiki) throws Exception {
+	public int lookupTopicCount(String virtualWiki) throws DataAccessException {
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().lookupTopicCount(virtualWikiId);
-		return rs.getInt("topic_count");
+		try {
+			WikiResultSet rs = this.queryHandler().lookupTopicCount(virtualWikiId);
+			return rs.getInt("topic_count");
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public List lookupTopicByType(String virtualWiki, int topicType, Pagination pagination) throws Exception {
-		Vector results = new Vector();
+	public List<String> lookupTopicByType(String virtualWiki, int topicType, Pagination pagination) throws DataAccessException {
+		List<String> results = new ArrayList<String>();
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().lookupTopicByType(virtualWikiId, topicType, pagination);
-		while (rs.next()) {
-			results.add(rs.getString(DATA_TOPIC_NAME));
+		try {
+			WikiResultSet rs = this.queryHandler().lookupTopicByType(virtualWikiId, topicType, pagination);
+			while (rs.next()) {
+				results.add(rs.getString("topic_name"));
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return results;
 	}
@@ -906,35 +1120,40 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public TopicVersion lookupTopicVersion(int topicVersionId) throws Exception {
+	public TopicVersion lookupTopicVersion(int topicVersionId) throws DataAccessException {
+		Element cacheElement = WikiCache.retrieveFromCache(CACHE_TOPIC_VERSIONS, topicVersionId);
+		if (cacheElement != null) {
+			return (TopicVersion)cacheElement.getObjectValue();
+		}
 		TopicVersion result = null;
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiResultSet rs = this.queryHandler().lookupTopicVersion(topicVersionId, conn);
 			result = (rs.size() == 0) ? null : this.initTopicVersion(rs);
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
+		WikiCache.addToCache(CACHE_TOPIC_VERSIONS, topicVersionId, result);
 		return result;
 	}
 
 	/**
 	 *
 	 */
-	public VirtualWiki lookupVirtualWiki(String virtualWikiName) throws Exception {
+	public VirtualWiki lookupVirtualWiki(String virtualWikiName) throws DataAccessException {
 		Element cacheElement = WikiCache.retrieveFromCache(CACHE_VIRTUAL_WIKI, virtualWikiName);
 		if (cacheElement != null) {
 			return (VirtualWiki)cacheElement.getObjectValue();
 		}
-		List virtualWikis = this.getVirtualWikiList();
-		for (Iterator iterator = virtualWikis.iterator(); iterator.hasNext();) {
-			VirtualWiki virtualWiki = (VirtualWiki)iterator.next();
+		List<VirtualWiki> virtualWikis = this.getVirtualWikiList();
+		for (VirtualWiki virtualWiki : virtualWikis) {
 			if (virtualWiki.getName().equals(virtualWikiName)) {
 				WikiCache.addToCache(CACHE_VIRTUAL_WIKI, virtualWikiName, virtualWiki);
 				return virtualWiki;
@@ -947,7 +1166,7 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	private int lookupVirtualWikiId(String virtualWikiName) throws Exception {
+	private int lookupVirtualWikiId(String virtualWikiName) throws DataAccessException {
 		VirtualWiki virtualWiki = this.lookupVirtualWiki(virtualWikiName);
 		WikiCache.addToCache(CACHE_VIRTUAL_WIKI, virtualWikiName, virtualWiki);
 		return (virtualWiki == null) ? -1 : virtualWiki.getVirtualWikiId();
@@ -956,16 +1175,14 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	private String lookupVirtualWikiName(int virtualWikiId) throws Exception {
-		VirtualWiki virtualWiki = null;
+	private String lookupVirtualWikiName(int virtualWikiId) throws DataAccessException {
 		Element cacheElement = WikiCache.retrieveFromCache(CACHE_VIRTUAL_WIKI, virtualWikiId);
 		if (cacheElement != null) {
-			virtualWiki = (VirtualWiki)cacheElement.getObjectValue();
+			VirtualWiki virtualWiki = (VirtualWiki)cacheElement.getObjectValue();
 			return (virtualWiki == null) ? null : virtualWiki.getName();
 		}
-		List virtualWikis = this.getVirtualWikiList();
-		for (Iterator iterator = virtualWikis.iterator(); iterator.hasNext();) {
-			virtualWiki = (VirtualWiki)iterator.next();
+		List<VirtualWiki> virtualWikis = this.getVirtualWikiList();
+		for (VirtualWiki virtualWiki : virtualWikis) {
 			if (virtualWiki.getVirtualWikiId() == virtualWikiId) {
 				WikiCache.addToCache(CACHE_VIRTUAL_WIKI, virtualWikiId, virtualWiki);
 				return virtualWiki.getName();
@@ -978,13 +1195,18 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public WikiFile lookupWikiFile(String virtualWiki, String topicName) throws Exception {
+	public WikiFile lookupWikiFile(String virtualWiki, String topicName) throws DataAccessException {
 		Topic topic = this.lookupTopic(virtualWiki, topicName, false, null);
 		if (topic == null) {
 			return null;
 		}
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().lookupWikiFile(virtualWikiId, topic.getTopicId());
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().lookupWikiFile(virtualWikiId, topic.getTopicId());
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		return (rs.size() == 0) ? null : initWikiFile(rs);
 	}
 
@@ -994,91 +1216,124 @@ public class AnsiDataHandler implements DataHandler {
 	 *
 	 * @param virtualWiki The virtual wiki of the files being retrieved.
 	 */
-	public int lookupWikiFileCount(String virtualWiki) throws Exception {
+	public int lookupWikiFileCount(String virtualWiki) throws DataAccessException {
 		int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
-		WikiResultSet rs = this.queryHandler().lookupWikiFileCount(virtualWikiId);
-		return rs.getInt("file_count");
+		try {
+			WikiResultSet rs = this.queryHandler().lookupWikiFileCount(virtualWikiId);
+			return rs.getInt("file_count");
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public WikiGroup lookupWikiGroup(String groupName) throws Exception {
-		WikiResultSet rs = this.queryHandler().lookupWikiGroup(groupName);
+	public WikiGroup lookupWikiGroup(String groupName) throws DataAccessException {
+		WikiResultSet rs = null;
+		try {
+			rs = this.queryHandler().lookupWikiGroup(groupName);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 		return (rs.size() == 0) ? null : initWikiGroup(rs);
 	}
 
 	/**
 	 *
 	 */
-	public WikiUser lookupWikiUser(int userId) throws Exception {
+	public WikiUser lookupWikiUser(int userId) throws DataAccessException {
+		Element cacheElement = WikiCache.retrieveFromCache(CACHE_USER_BY_USER_ID, userId);
+		if (cacheElement != null) {
+			return (WikiUser)cacheElement.getObjectValue();
+		}
 		WikiUser result = null;
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiResultSet rs = this.queryHandler().lookupWikiUser(userId, conn);
 			result = (rs.size() == 0) ? null : initWikiUser(rs);
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
+		WikiCache.addToCache(CACHE_USER_BY_USER_ID, userId, result);
 		return result;
 	}
 
 	/**
 	 *
 	 */
-	public WikiUser lookupWikiUser(String username) throws Exception {
+	public WikiUser lookupWikiUser(String username) throws DataAccessException {
+		Element cacheElement = WikiCache.retrieveFromCache(CACHE_USER_BY_USER_NAME, username);
+		if (cacheElement != null) {
+			return (WikiUser)cacheElement.getObjectValue();
+		}
 		WikiUser result = null;
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiResultSet rs = this.queryHandler().lookupWikiUser(username, conn);
 			if (rs.size() == 0) {
 				result = null;
 			} else {
-				int userId = rs.getInt(DATA_WIKI_USER_ID);
+				int userId = rs.getInt("wiki_user_id");
 				result = lookupWikiUser(userId);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
+		WikiCache.addToCache(CACHE_USER_BY_USER_NAME, username, result);
 		return result;
 	}
 
 	/**
 	 * Return a count of all wiki users.
 	 */
-	public int lookupWikiUserCount() throws Exception {
-		WikiResultSet rs = this.queryHandler().lookupWikiUserCount();
-		return rs.getInt("user_count");
+	public int lookupWikiUserCount() throws DataAccessException {
+		try {
+			WikiResultSet rs = this.queryHandler().lookupWikiUserCount();
+			return rs.getInt("user_count");
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public String lookupWikiUserEncryptedPassword(String username) throws Exception {
-		WikiResultSet rs = this.queryHandler().lookupWikiUserEncryptedPassword(username);
-		return (rs.size() == 0) ? null : rs.getString("password");
+	public String lookupWikiUserEncryptedPassword(String username) throws DataAccessException {
+		try {
+			WikiResultSet rs = this.queryHandler().lookupWikiUserEncryptedPassword(username);
+			return (rs.size() == 0) ? null : rs.getString("password");
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	public List lookupWikiUsers(Pagination pagination) throws Exception {
-		Vector results = new Vector();
-		WikiResultSet rs = this.queryHandler().lookupWikiUsers(pagination);
-		while (rs.next()) {
-			results.add(rs.getString("login"));
+	public List<String> lookupWikiUsers(Pagination pagination) throws DataAccessException {
+		List<String> results = new ArrayList<String>();
+		try {
+			WikiResultSet rs = this.queryHandler().lookupWikiUsers(pagination);
+			while (rs.next()) {
+				results.add(rs.getString("login"));
+			}
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
 		}
 		return results;
 	}
@@ -1086,9 +1341,10 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void moveTopic(Topic fromTopic, TopicVersion fromVersion, String destination) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void moveTopic(Topic fromTopic, TopicVersion fromVersion, String destination) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			if (!this.canMoveTopic(fromTopic, destination)) {
 				throw new WikiException(new WikiMessage("move.exception.destinationexists", destination));
@@ -1098,21 +1354,24 @@ public class AnsiDataHandler implements DataHandler {
 			if (detinationExistsFlag) {
 				// if the target topic is a redirect to the source topic then the
 				// target must first be deleted.
-				this.deleteTopic(toTopic, null, false);
+				this.deleteTopic(toTopic, null);
 			}
 			// first rename the source topic with the new destination name
 			String fromTopicName = fromTopic.getName();
 			fromTopic.setName(destination);
+			// only one version needs to create a recent change entry, so do not create a log entry
+			// for the "from" version
+			fromVersion.setRecentChangeAllowed(false);
 			ParserOutput fromParserOutput = ParserUtil.parserOutput(fromTopic.getTopicContent(), fromTopic.getVirtualWiki(), fromTopic.getName());
-			writeTopic(fromTopic, fromVersion, fromParserOutput.getCategories(), fromParserOutput.getLinks(), true);
+			writeTopic(fromTopic, fromVersion, fromParserOutput.getCategories(), fromParserOutput.getLinks());
 			// now either create a new topic that is a redirect with the
 			// source topic's old name, or else undelete the new topic and
 			// rename.
 			if (detinationExistsFlag) {
 				// target topic was deleted, so rename and undelete
 				toTopic.setName(fromTopicName);
-				writeTopic(toTopic, null, null, null, false);
-				this.undeleteTopic(toTopic, null, false);
+				writeTopic(toTopic, null, null, null);
+				this.undeleteTopic(toTopic, null);
 			} else {
 				// create a new topic that redirects to the destination
 				toTopic = fromTopic;
@@ -1126,14 +1385,21 @@ public class AnsiDataHandler implements DataHandler {
 			TopicVersion toVersion = fromVersion;
 			toVersion.setTopicVersionId(-1);
 			toVersion.setVersionContent(content);
+			toVersion.setRecentChangeAllowed(true);
 			ParserOutput toParserOutput = ParserUtil.parserOutput(toTopic.getTopicContent(), toTopic.getVirtualWiki(), toTopic.getName());
-			writeTopic(toTopic, toVersion, toParserOutput.getCategories(), toParserOutput.getLinks(), true);
-		} catch (Exception e) {
+			writeTopic(toTopic, toVersion, toParserOutput.getCategories(), toParserOutput.getLinks());
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (ParserException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1148,17 +1414,18 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void reloadRecentChanges() throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void reloadLogItems() throws DataAccessException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
-			this.queryHandler().reloadRecentChanges(conn);
-		} catch (Exception e) {
+			List<VirtualWiki> virtualWikis = this.getVirtualWikiList();
+			for (VirtualWiki virtualWiki : virtualWikis) {
+				this.queryHandler().reloadLogItems(virtualWiki.getVirtualWikiId(), conn);
+			}
+		} catch (SQLException e) {
 			DatabaseConnection.rollbackOnException(status, e);
-			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+			throw new DataAccessException(e);
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1166,13 +1433,29 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void setup(Locale locale, WikiUser user, String username, String encryptedPassword) throws Exception {
+	public void reloadRecentChanges() throws DataAccessException {
+		TransactionStatus status = null;
+		try {
+			status = DatabaseConnection.startTransaction();
+			Connection conn = DatabaseConnection.getConnection();
+			this.queryHandler().reloadRecentChanges(conn);
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		}
+		DatabaseConnection.commit(status);
+	}
+
+	/**
+	 *
+	 */
+	public void setup(Locale locale, WikiUser user, String username, String encryptedPassword) throws DataAccessException, WikiException {
 		WikiDatabase.initialize();
 		// determine if database exists
 		try {
 			DatabaseConnection.executeQuery(WikiDatabase.getExistenceValidationQuery());
 			return;
-		} catch (Exception e) {
+		} catch (SQLException e) {
 			// database not yet set up
 		}
 		WikiDatabase.setup(locale, user, username, encryptedPassword);
@@ -1181,20 +1464,24 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void setupSpecialPages(Locale locale, WikiUser user, VirtualWiki virtualWiki) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void setupSpecialPages(Locale locale, WikiUser user, VirtualWiki virtualWiki) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			// create the default topics
 			WikiDatabase.setupSpecialPage(locale, virtualWiki.getName(), WikiBase.SPECIAL_PAGE_STARTING_POINTS, user, false);
 			WikiDatabase.setupSpecialPage(locale, virtualWiki.getName(), WikiBase.SPECIAL_PAGE_LEFT_MENU, user, true);
 			WikiDatabase.setupSpecialPage(locale, virtualWiki.getName(), WikiBase.SPECIAL_PAGE_BOTTOM_AREA, user, true);
 			WikiDatabase.setupSpecialPage(locale, virtualWiki.getName(), WikiBase.SPECIAL_PAGE_STYLESHEET, user, true);
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1202,21 +1489,28 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void undeleteTopic(Topic topic, TopicVersion topicVersion, boolean userVisible) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void undeleteTopic(Topic topic, TopicVersion topicVersion) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			// update topic to indicate deleted, add delete topic version.  if
 			// topic has categories or other metadata then parser document is
 			// also needed.
 			ParserOutput parserOutput = ParserUtil.parserOutput(topic.getTopicContent(), topic.getVirtualWiki(), topic.getName());
 			topic.setDeleteDate(null);
-			this.writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), userVisible);
-		} catch (Exception e) {
+			this.writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks());
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (ParserException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1224,25 +1518,35 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void updateSpecialPage(Locale locale, String virtualWiki, String topicName, String ipAddress) throws Exception {
+	public void updateSpecialPage(Locale locale, String virtualWiki, String topicName, String userDisplay) throws DataAccessException, WikiException {
 		logger.info("Updating special page " + virtualWiki + " / " + topicName);
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			String contents = WikiUtil.readSpecialPage(locale, topicName);
 			Topic topic = this.lookupTopic(virtualWiki, topicName, false, conn);
 			int charactersChanged = StringUtils.length(contents) - StringUtils.length(topic.getTopicContent());
 			topic.setTopicContent(contents);
 			// FIXME - hard coding
-			TopicVersion topicVersion = new TopicVersion(null, ipAddress, "Automatically updated by system upgrade", contents, charactersChanged);
+			TopicVersion topicVersion = new TopicVersion(null, userDisplay, "Automatically updated by system upgrade", contents, charactersChanged);
 			ParserOutput parserOutput = ParserUtil.parserOutput(topic.getTopicContent(), virtualWiki, topicName);
-			writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), true);
-		} catch (Exception e) {
+			writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks());
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (IOException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (ParserException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1250,51 +1554,75 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	private void updateTopic(Topic topic, Connection conn) throws Exception {
+	private void updateTopic(Topic topic, Connection conn) throws DataAccessException, WikiException {
 		int virtualWikiId = this.lookupVirtualWikiId(topic.getVirtualWiki());
 		this.validateTopic(topic);
-		this.queryHandler().updateTopic(topic, virtualWikiId, conn);
+		try {
+			this.queryHandler().updateTopic(topic, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void updateUserDetails(WikiUserDetails userDetails, Connection conn) throws Exception {
+	private void updateUserDetails(WikiUserDetails userDetails, Connection conn) throws DataAccessException, WikiException {
 		this.validateUserDetails(userDetails);
-		this.queryHandler().updateUserDetails(userDetails, conn);
+		try {
+			this.queryHandler().updateUserDetails(userDetails, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void updateVirtualWiki(VirtualWiki virtualWiki, Connection conn) throws Exception {
+	private void updateVirtualWiki(VirtualWiki virtualWiki, Connection conn) throws DataAccessException, WikiException {
 		this.validateVirtualWiki(virtualWiki);
-		this.queryHandler().updateVirtualWiki(virtualWiki, conn);
+		try {
+			this.queryHandler().updateVirtualWiki(virtualWiki, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void updateWikiFile(WikiFile wikiFile, Connection conn) throws Exception {
+	private void updateWikiFile(WikiFile wikiFile, Connection conn) throws DataAccessException, WikiException {
 		int virtualWikiId = this.lookupVirtualWikiId(wikiFile.getVirtualWiki());
 		this.validateWikiFile(wikiFile);
-		this.queryHandler().updateWikiFile(wikiFile, virtualWikiId, conn);
+		try {
+			this.queryHandler().updateWikiFile(wikiFile, virtualWikiId, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void updateWikiGroup(WikiGroup group, Connection conn) throws Exception {
+	private void updateWikiGroup(WikiGroup group, Connection conn) throws DataAccessException, WikiException {
 		this.validateWikiGroup(group);
-		this.queryHandler().updateWikiGroup(group, conn);
+		try {
+			this.queryHandler().updateWikiGroup(group, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
 	 *
 	 */
-	private void updateWikiUser(WikiUser user, Connection conn) throws Exception {
+	private void updateWikiUser(WikiUser user, Connection conn) throws DataAccessException, WikiException {
 		this.validateWikiUser(user);
-		this.queryHandler().updateWikiUser(user, conn);
+		try {
+			this.queryHandler().updateWikiUser(user, conn);
+		} catch (SQLException e) {
+			throw new DataAccessException(e);
+		}
 	}
 
 	/**
@@ -1315,11 +1643,21 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
+	protected void validateLogItem(LogItem logItem) throws WikiException {
+		checkLength(logItem.getUserDisplayName(), 200);
+		checkLength(logItem.getLogParamString(), 500);
+		logItem.setLogComment(StringUtils.substring(logItem.getLogComment(), 0, 200));
+	}
+
+	/**
+	 *
+	 */
 	protected void validateRecentChange(RecentChange change) throws WikiException {
 		checkLength(change.getTopicName(), 200);
 		checkLength(change.getAuthorName(), 200);
 		checkLength(change.getVirtualWiki(), 100);
-		change.setEditComment(StringUtils.substring(change.getEditComment(), 0, 200));
+		change.setChangeComment(StringUtils.substring(change.getChangeComment(), 0, 200));
+		checkLength(change.getParamString(), 500);
 	}
 
 	/**
@@ -1342,7 +1680,8 @@ public class AnsiDataHandler implements DataHandler {
 	 *
 	 */
 	protected void validateTopicVersion(TopicVersion topicVersion) throws WikiException {
-		checkLength(topicVersion.getAuthorIpAddress(), 39);
+		checkLength(topicVersion.getAuthorDisplay(), 100);
+		checkLength(topicVersion.getVersionParamString(), 500);
 		topicVersion.setEditComment(StringUtils.substring(topicVersion.getEditComment(), 0, 200));
 	}
 
@@ -1387,7 +1726,7 @@ public class AnsiDataHandler implements DataHandler {
 	protected void validateWikiFileVersion(WikiFileVersion wikiFileVersion) throws WikiException {
 		checkLength(wikiFileVersion.getUrl(), 200);
 		checkLength(wikiFileVersion.getMimeType(), 100);
-		checkLength(wikiFileVersion.getAuthorIpAddress(), 39);
+		checkLength(wikiFileVersion.getAuthorDisplay(), 100);
 		wikiFileVersion.setUploadComment(StringUtils.substring(wikiFileVersion.getUploadComment(), 0, 200));
 	}
 
@@ -1416,9 +1755,10 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeFile(WikiFile wikiFile, WikiFileVersion wikiFileVersion) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeFile(WikiFile wikiFile, WikiFileVersion wikiFileVersion) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiUtil.validateTopicName(wikiFile.getFileName());
 			if (wikiFile.getFileId() <= 0) {
@@ -1429,12 +1769,15 @@ public class AnsiDataHandler implements DataHandler {
 			wikiFileVersion.setFileId(wikiFile.getFileId());
 			// write version
 			addWikiFileVersion(wikiFileVersion, conn);
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1442,9 +1785,10 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeRole(Role role, boolean update) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeRole(Role role, boolean update) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			this.validateRole(role);
 			if (update) {
@@ -1453,12 +1797,12 @@ public class AnsiDataHandler implements DataHandler {
 				this.queryHandler().insertRole(role, conn);
 			}
 			// FIXME - add caching
-		} catch (Exception e) {
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1466,26 +1810,25 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeRoleMapGroup(int groupId, List roles) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeRoleMapGroup(int groupId, List<String> roles) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			this.queryHandler().deleteGroupAuthorities(groupId, conn);
-			Iterator roleIterator = roles.iterator();
-			while (roleIterator.hasNext()) {
-				String authority = (String)roleIterator.next();
+			for (String authority : roles) {
 				this.validateAuthority(authority);
 				this.queryHandler().insertGroupAuthority(groupId, authority, conn);
 			}
 			// refresh the current role requirements
 			JAMWikiAuthenticationConfiguration.resetJamwikiAnonymousAuthorities();
 			JAMWikiAuthenticationConfiguration.resetDefaultGroupRoles();
-		} catch (Exception e) {
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1493,23 +1836,22 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeRoleMapUser(String username, List roles) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeRoleMapUser(String username, List<String> roles) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			this.queryHandler().deleteUserAuthorities(username, conn);
-			Iterator roleIterator = roles.iterator();
-			while (roleIterator.hasNext()) {
-				String authority = (String)roleIterator.next();
+			for (String authority : roles) {
 				this.validateAuthority(authority);
 				this.queryHandler().insertUserAuthority(username, authority, conn);
 			}
-		} catch (Exception e) {
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1530,13 +1872,11 @@ public class AnsiDataHandler implements DataHandler {
 	 * @param links A List of all topic names that are linked to from the
 	 *  current topic.  These will be passed to the search engine to create
 	 *  searchable metadata.
-	 * @param userVisible A flag indicating whether or not this change should
-	 *  be visible to Wiki users.  This flag should be true except in rare
-	 *  cases, such as when temporarily deleting a topic during page moves.
 	 */
-	public void writeTopic(Topic topic, TopicVersion topicVersion, LinkedHashMap categories, Vector links, boolean userVisible) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeTopic(Topic topic, TopicVersion topicVersion, LinkedHashMap<String, String> categories, List<String> links) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			String key = WikiCache.key(topic.getVirtualWiki(), topic.getName());
 			WikiCache.removeFromCache(WikiBase.CACHE_PARSED_TOPIC_CONTENT, key);
 			WikiCache.removeFromCache(CACHE_TOPICS, key);
@@ -1547,30 +1887,35 @@ public class AnsiDataHandler implements DataHandler {
 			} else {
 				updateTopic(topic, conn);
 			}
-			if (userVisible) {
+			if (topicVersion != null) {
 				if (topicVersion.getPreviousTopicVersionId() == null && topic.getCurrentVersionId() != null) {
 					topicVersion.setPreviousTopicVersionId(topic.getCurrentVersionId());
 				}
 				topicVersion.setTopicId(topic.getTopicId());
+				topicVersion.initializeVersionParams(topic);
 				// write version
 				addTopicVersion(topicVersion, conn);
-				String authorName = topicVersion.getAuthorIpAddress();
-				Integer authorId = topicVersion.getAuthorId();
-				if (authorId != null) {
-					WikiUser user = this.lookupWikiUser(topicVersion.getAuthorId().intValue());
-					authorName = user.getUsername();
+				topic.setCurrentVersionId(topicVersion.getTopicVersionId());
+				String authorName = this.authorName(topicVersion.getAuthorId(), topicVersion.getAuthorDisplay());
+				LogItem logItem = LogItem.initLogItem(topic, topicVersion, authorName);
+				RecentChange change = null;
+				if (logItem != null) {
+					this.addLogItem(logItem, conn);
+					change = RecentChange.initRecentChange(logItem);
+				} else {
+					change = RecentChange.initRecentChange(topic, topicVersion, authorName);
 				}
-				RecentChange change = new RecentChange(topic, topicVersion, authorName);
-				this.addRecentChange(change, conn);
+				if (topicVersion.isRecentChangeAllowed()) {
+					this.addRecentChange(change, conn);
+				}
 			}
 			if (categories != null) {
 				// add / remove categories associated with the topic
 				this.deleteTopicCategories(topic, conn);
-				for (Iterator iterator = categories.keySet().iterator(); iterator.hasNext();) {
-					String categoryName = (String)iterator.next();
+				for (String categoryName : categories.keySet()) {
 					Category category = new Category();
 					category.setName(categoryName);
-					category.setSortKey((String)categories.get(categoryName));
+					category.setSortKey(categories.get(categoryName));
 					category.setVirtualWiki(topic.getVirtualWiki());
 					category.setChildTopicName(topic.getName());
 					this.addCategory(category, conn);
@@ -1580,12 +1925,15 @@ public class AnsiDataHandler implements DataHandler {
 				WikiBase.getSearchEngine().deleteFromIndex(topic);
 				WikiBase.getSearchEngine().addToIndex(topic, links);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1593,9 +1941,10 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeVirtualWiki(VirtualWiki virtualWiki) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeVirtualWiki(VirtualWiki virtualWiki) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			WikiUtil.validateTopicName(virtualWiki.getName());
 			if (virtualWiki.getVirtualWikiId() <= 0) {
@@ -1603,15 +1952,17 @@ public class AnsiDataHandler implements DataHandler {
 			} else {
 				this.updateVirtualWiki(virtualWiki, conn);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
-
 		// update the cache AFTER the commit
 		WikiCache.removeFromCache(CACHE_VIRTUAL_WIKI, virtualWiki.getName());
 		WikiCache.removeFromCache(CACHE_VIRTUAL_WIKI, virtualWiki.getVirtualWikiId());
@@ -1622,9 +1973,10 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeWatchlistEntry(Watchlist watchlist, String virtualWiki, String topicName, int userId) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeWatchlistEntry(Watchlist watchlist, String virtualWiki, String topicName, int userId) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			int virtualWikiId = this.lookupVirtualWikiId(virtualWiki);
 			String article = WikiUtil.extractTopicLink(topicName);
@@ -1642,12 +1994,15 @@ public class AnsiDataHandler implements DataHandler {
 				watchlist.add(article);
 				watchlist.add(comments);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1655,21 +2010,25 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeWikiGroup(WikiGroup group) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction();
+	public void writeWikiGroup(WikiGroup group) throws DataAccessException, WikiException {
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			if (group.getGroupId() <= 0) {
 				this.addWikiGroup(group, conn);
 			} else {
 				this.updateWikiGroup(group, conn);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
 	}
@@ -1677,10 +2036,11 @@ public class AnsiDataHandler implements DataHandler {
 	/**
 	 *
 	 */
-	public void writeWikiUser(WikiUser user, String username, String encryptedPassword) throws Exception {
+	public void writeWikiUser(WikiUser user, String username, String encryptedPassword) throws DataAccessException, WikiException {
 		WikiUtil.validateUserName(user.getUsername());
-		TransactionStatus status = DatabaseConnection.startTransaction();
+		TransactionStatus status = null;
 		try {
+			status = DatabaseConnection.startTransaction();
 			Connection conn = DatabaseConnection.getConnection();
 			if (user.getUserId() <= 0) {
 				WikiUserDetails userDetails = new WikiUserDetails(username, encryptedPassword, true, true, true, true, JAMWikiAuthenticationConfiguration.getDefaultGroupRoles());
@@ -1688,6 +2048,14 @@ public class AnsiDataHandler implements DataHandler {
 				this.addWikiUser(user, conn);
 				// add all users to the registered user group
 				this.addGroupMember(user.getUsername(), WikiBase.getGroupRegisteredUser().getGroupId(), conn);
+				// FIXME - reconsider this approach of separate entries for every virtual wiki
+				List<VirtualWiki> virtualWikis = this.getVirtualWikiList();
+				for (VirtualWiki virtualWiki : virtualWikis) {
+					LogItem logItem = LogItem.initLogItem(user, virtualWiki.getName());
+					this.addLogItem(logItem, conn);
+					RecentChange change = RecentChange.initRecentChange(logItem);
+					this.addRecentChange(change, conn);
+				}
 			} else {
 				if (!StringUtils.isBlank(encryptedPassword)) {
 					WikiUserDetails userDetails = new WikiUserDetails(username, encryptedPassword, true, true, true, true, JAMWikiAuthenticationConfiguration.getDefaultGroupRoles());
@@ -1695,13 +2063,21 @@ public class AnsiDataHandler implements DataHandler {
 				}
 				this.updateWikiUser(user, conn);
 			}
-		} catch (Exception e) {
+		} catch (DataAccessException e) {
 			DatabaseConnection.rollbackOnException(status, e);
 			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
+		} catch (SQLException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw new DataAccessException(e);
+		} catch (WikiException e) {
+			DatabaseConnection.rollbackOnException(status, e);
+			throw e;
 		}
 		DatabaseConnection.commit(status);
+		// update the cache AFTER the commit
+		WikiCache.removeFromCache(CACHE_USER_BY_USER_ID, user.getUserId());
+		WikiCache.removeFromCache(CACHE_USER_BY_USER_NAME, user.getUsername());
+		WikiCache.addToCache(CACHE_USER_BY_USER_ID, user.getUserId(), user);
+		WikiCache.addToCache(CACHE_USER_BY_USER_NAME, user.getUsername(), user);
 	}
 }
